Correctly align icons vertically in home card

--- a/frontend/src/assets/scss/components/translations-dashboard-home-card.scss
+++ b/frontend/src/assets/scss/components/translations-dashboard-home-card.scss
@@ -2,7 +2,7 @@
   .summary-icon {
     width: 5rem;
     height: 5rem;
-    line-height: calc(5rem - 4px);
+    line-height: 5rem;
     text-align: center;
     color: #fff;
     border-radius: 50%;
